css: add empty progress bar

--- a/style.css
+++ b/style.css
@@ -23,12 +23,10 @@ body {
 /* all the elements in here are centered */
 .container {
     text-align: center;
-    border: 1px dashed red;
 }
 
 /* numbers on the progress bar */
 .progress-container {
-    border: 1px dashed red;
     display: flex;
     /* creates space between the numbers */
     justify-content: space-between;
@@ -36,16 +34,38 @@ body {
     position: relative;
     /* margin bottom to push it away from the buttons */
     margin-bottom: 2rem;
-    /* take up the entire width */
+    /* shows the width of the progress bar */
     max-width: 100%;
     /* make the width: */
     width: 350px;
 }
 
+/* before used to show empty progress bar */
+.progress-container::before {
+    /* we don't see anything because whenever we use ::before, we need content: '' */
+    content: '';
+    /* color of the progress bar */
+    background-color: #e0e0e0;
+    /* this is absolutely positioned relative to progress container */
+    position: absolute;
+    /* move progress bar to the center */
+    transform: translateY(-50%);
+    /* top is for vertically centering the progress bar */
+    top: 50%;
+    /* height determines the height of the progress bar */
+    height: 4px;
+    /* the width is what actually shows as the progress bar */
+    /* 0 means the progress bar starts at 0% out of 100% */
+    width: 100%;
+    /* make sure progress bar is BEHIND the circles */
+    z-index: -1;
+    /* no longer need transition because it's static */
+}
+
 /* progress bar */
 .progress-bar {
     /* color of the progress bar */
-    background-color: blue;
+    background-color: #3498db;
     /* this is absolutely positioned relative to progress container */
     position: absolute;
     /* move progress bar to the center */
