--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
     font-family: 'Muli', sans-serif;
     /* default layout */
     display: flex;
+    flex-direction: column;
     align-items: center;
     /* need height for the layout to work */
     justify-content: center;
